corrects feature over bleed

--- a/less/feature.less
+++ b/less/feature.less
@@ -1,24 +1,25 @@
-.download{
+ 
+ .download{
     
     font-size: 50rem bolder;
     padding: 25px;
 }
 #feature-item-intro {
-    background: url(../img/dark-empty-classroom.jpg); opacity: 0.6; z-index: 1;
+   background: url(../img/dark-empty-classroom.jpg); opacity: 0.6; 
     opacity: 1;
-    height: 350px;
+    //height: 350px;
     
     .feature-header {
         color: @infoTopBg;
         padding: 12px;
         font-size: 4rem;
-        z-index: 1;
+       
     }
     .feature-content {
         color: @infoTopBg;
         padding: 12px;
         font-size: 2.5rem;
-        z-index: 1;
+       
         padding: 20px;
     }
 }
@@ -36,39 +37,39 @@
     background: url(../img/Cell\ Phone.jpg);
     background-color: #cfcfd1; 
     opacity: 0.8;
-    height: 450px;
+    //height: 450px;
 
     .feature-header {
         color: @featureFont;
         padding: 12px;
         font-size: 4rem;
-        z-index: 1;
+       
     }
     .feature-content {
         color: @featureFont;
         padding: 12px;
         font-size: 2.5rem;
-        z-index: 1;
+       
         padding: 20px;
     }
 }
 #connect-feature {
     background: url(../img/sticky=note\ meeting.jpg);
     background-color: #cfcfd1; 
-    height: 350px;
+   // height: 350px;
 
     .feature-header {
         color: @buttonFont;
         padding: 12px;
         font-size: 4rem;
-        z-index: 1;
+     
         background-color: @font-color; opacity: 0.7;
     }
     .feature-content {
         color: @buttonFont;
         padding: 12px;
         font-size: 2.5rem;
-        z-index: 1;
+       
         padding: 20px;
         background-color: @font-color; opacity: 0.7;
     }
@@ -76,26 +77,26 @@
 
 #work-order-feature {
     background-color: @navFont;
-    height: 350px;
+   // height: 350px;
 
     .feature-header {
         color: @infoTopBg;
         padding: 12px;
         font-size: 4rem;
-        z-index: 1;
+        
         background-color: @font-color; opacity: 0.7;
     }
     .feature-content {
         color: @infoTopBg;
         padding: 12px;
         font-size: 2.5rem;
-        z-index: 1;
+        
         padding: 20px;
         background-color: @font-color; opacity: 0.7;
     }
 }
 #work-img-dv {
-    height: 100px;
+   // height: 100px;
 }
 
 
